...
  var searchSuggestionText by remember { mutableStateOf("") }

  // State for managing the loading state
  val isLoading by suggestionsViewModel.isLoading.collectAsState()

  Scaffold(
      modifier = Modifier.testTag("suggestionFeedScreen"),
      topBar = {
        Column {
          SuggestionTopBarWithHistory(
              onHistoryClick = { oldNavActions.navigateTo(Route.SUGGESTION_HISTORY) })
          Spacer(modifier = Modifier.padding(top = 4.dp))
          // Top bar with search functionality based on the title of the trips
...
